--- a/editor/src/main/assets/editor.html
+++ b/editor/src/main/assets/editor.html
@@ -22,6 +22,7 @@
 	$(function() {
 		editor.summernote({
 			toolbar: [],
+			lang: 'zh-CN',
 			callbacks: {
 				onInit: function(e) {
 					editor.summernote("fullscreen.toggle");
@@ -29,7 +30,6 @@
 					Editor.onInit();
 				},
 				onChange: function(contents, $editable) {
-					//Editor.refreshHtml(contents);
 					Editor.onChange(contents);
     			},
     			onEnter: function() {
@@ -40,112 +40,122 @@
     			},
     			onBlur: function() {
     				Editor.onBlur();
-    			},
-    			onImageUpload: function(files) {
-    				Editor.onImageUpload(files);
     			}
 			}
 		});
 	});
-	// TODO 撤销操作
-	var undo = function() { editor.summernote('undo'); };
-	// TODO 恢复操作
-	var redo = function() { editor.summernote('redo'); };
-	// TODO 设置一个焦点
-	var focus = function(){ editor.summernote('focus'); };
-	// TODO 重置
-	var reset = function(){ editor.summernote('reset'); };
-	// TODO 设置不能编辑
-	var disable = function(){ editor.summernote('disable'); };
-	// TODO 设置能够编辑
-	var enable = function(){ editor.summernote('enable'); };
-	// TODO 获取富文本编辑器对象
+
+	// TODO 基础操作
+	/** 撤销 **/
+	var undo = function() { editor.summernote('undo'); }
+	/** 恢复 **/
+	var redo = function() { editor.summernote('redo'); }
+	/** 获取焦点 **/
+	var focus = function() { editor.summernote('focus'); }
+	/** 失去焦点 **/
+	var blur = function() { editor.summernote('blur'); }
+	/** 重置 **/
+	var reset = function() { editor.summernote('reset'); }
+	/** 不能编辑 **/
+	var disable = function() { editor.summernote('disable'); }
+	/** 能编辑 **/
+	var enable = function() { editor.summernote('enable'); }
+
+	/** 设置背景颜色 **/
+	var backgroud = function(background) {
+		var context = editor.first().data('summernote');
+		var editable = context.layoutInfo.editor.find('.note-editable');
+		editable.css('background', background);
+	}
+
+	// TODO 字体样式
+	/** 加粗 **/
+	var bold = function() { editor.summernote('bold'); }
+	/** 斜体 **/
+	var italic = function() { editor.summernote('italic'); }
+	/** 下划线 **/
+	var underline = function() { editor.summernote('underline'); }
+	/** 删除线 **/
+	var strikethrough = function() { editor.summernote('strikethrough'); }
+	/** 上标 **/
+	var superscript = function() { editor.summernote('superscript'); }
+	/** 下标 **/
+	var subscript = function() { editor.summernote('subscript'); }
+	/** 文字背景色 **/
+	var backColor = function(color) { editor.summernote('backColor', color); }
+	/** 文字颜色 **/
+	var foreColor = function(color) { editor.summernote('foreColor', color); }
+	/** 字体名称 **/
+	var fontName = function(fontName) { editor.summernote('fontName', fontName); }
+	/** 字体大小 **/
+	var fontSize = function(fontSize) { editor.summernote('fontSize', fontSize); }
+	/** 移除样式 **/
+	var removeFormat = function() { editor.summernote('removeFormat'); }
+
+	// TODO 段落
+	/** 文字居左 **/
+	var justifyLeft = function() { editor.summernote('justifyLeft'); }
+	/** 文字居右 **/
+	var justifyRight = function() { editor.summernote('justifyRight'); }
+	/** 文字居中 **/
+	var justifyCenter = function() { editor.summernote('justifyCenter'); }
+	/** 文字充满 **/
+	var justifyFull = function() { editor.summernote('justifyFull'); }
+	/** 有序列表 **/
+	var insertOrderedList = function() { editor.summernote('insertOrderedList'); }
+	/** 无序列表 **/
+	var insertUnorderedList = function() { editor.summernote('insertUnorderedList'); }
+	/** 缩进 **/
+	var indent = function() { editor.summernote('indent'); }
+	/** 不缩进 **/
+	var outdent = function() { editor.summernote('outdent'); }
+	/** 设置代码容器 **/
+	var formatBlock = function(tagName) { editor.summernote('formatBlock', tagName); };
+	/** 普通文字 **/
+	var formatPara = function() { editor.summernote('formatPara'); }
+	/** 标题一 **/
+	var formatH1 = function() { editor.summernote('formatH1'); }
+	/** 标题二 **/
+	var formatH2 = function() { editor.summernote('formatH2'); }
+	/** 标题三 **/
+	var formatH3 = function() { editor.summernote('formatH3'); }
+	/** 标题四 **/
+	var formatH4 = function() { editor.summernote('formatH4'); }
+	/** 标题五 **/
+	var formatH5 = function() { editor.summernote('formatH5'); }
+	/** 标题六 **/
+	var formatH6 = function() { editor.summernote('formatH6'); }
+	/** 行间距高度 **/
+	var lineHeight = function(lineHeight) { editor.summernote('lineHeight', lineHeight); }
+
+	// TODO 插入操作
+	/** 插入图片 **/
+	var insertImageUrl = function(imageUrl) { editor.summernote('insertImage', imageUrl, null); }
+	/** 插入文本 **/
+	var insertText = function(text) { editor.summernote('insertText', text); }
+	/** 插入表格 **/
+	var insertTable = function(dim) { editor.summernote('insertTable', dim); }
+	/** 粘贴html **/
 	var pasteHTML = function(html){
 		editor.summernote('code', html);
 		keepLastIndex(document.getElementsByClassName('note-editable panel-body')[0]);
 	}
+	/** 插入分割线 **/
+	var insertHorizontalRule = function() { editor.summernote('insertHorizontalRule'); }
+	/** 超链接 **/
+	var insertLink = function(linkText, linkUrl) {
+	    editor.summernote('createLink', {
+	      text: linkText,
+	      url: linkUrl,
+	      isNewWindow: false
+	    });
+	}
+	/** 切换编辑模式（代码模式和文本模式） **/
+	var codeView = function() { editor.summernote('codeview.toggle'); }
 	// TODO 保持光标在最后位置
 	function keepLastIndex(obj) {
 	    var range = window.getSelection();	//创建range
 	    range.selectAllChildren(obj);		//range 选择obj下所有子内容
 	    range.collapseToEnd();				//光标移至最后
 	}
-	var placeholder = function(hint) { editor.summernote({ placeholder: hint}); };
-	// TODO 加粗
-	var bold = function() { editor.summernote('bold'); };
-	// TODO 斜体
-	var italic = function() { editor.summernote('italic'); };
-	// TODO 下划线
-	var underline = function() { editor.summernote('underline'); };
-	// TODO 删除线
-	var strikethrough = function() { editor.summernote('strikethrough'); };
-	// TODO 设置上标
-	var superscript = function() { editor.summernote('superscript'); };
-	// TODO 设置下标
-	var subscript = function() { editor.summernote('subscript'); };
-	// TODO 背景颜色
-	var backColor = function(color) { editor.summernote('backColor', color); };
-	// TODO 文字颜色
-	var foreColor = function(color) { editor.summernote('foreColor', color); };
-	// TODO 字体名称
-	var fontName = function(fontName) { editor.summernote('fontName', fontName); };
-	// TODO 字体大小
-	var fontSize = function(fontSize) { editor.summernote('fontSize', fontSize); };
-	// TODO 文字居左
-	var justifyLeft = function() { editor.summernote('justifyLeft'); };
-	// TODO 文字居右
-	var justifyRight = function() { editor.summernote('justifyRight'); };
-	// TODO 文字居中
-	var justifyCenter = function() { editor.summernote('justifyCenter'); };
-	// TODO 文字充满
-	var justifyFull = function() { editor.summernote('justifyFull'); };
-
-	var insertOrderedList = function() { editor.summernote('insertOrderedList'); };
-
-	var insertUnorderedList = function() { editor.summernote('insertUnorderedList'); };
-
-	var indent = function() { editor.summernote('indent'); };
-
-	var outdent = function() { editor.summernote('outdent'); };
-
-	var formatBlock = function(tagName) { editor.summernote('formatBlock', tagName); };
-
-	var formatPara = function() { editor.summernote('formatPara'); };
-
-	var formatH1 = function() { editor.summernote('formatH1'); };
-
-	var formatH2 = function() { editor.summernote('formatH2'); };
-
-	var formatH3 = function() { editor.summernote('formatH3'); };
-
-	var formatH4 = function() { editor.summernote('formatH4'); };
-
-	var formatH5 = function() { editor.summernote('formatH5'); };
-
-	var formatH6 = function() { editor.summernote('formatH6'); };
-
-	var lineHeight = function(lineHeight) { editor.summernote('lineHeight', lineHeight); };
-
-	var insertImageUrl = function(imageUrl) { editor.summernote('insertImage', imageUrl, null); };
-
-	var insertText = function(text) { editor.summernote('insertText', text); };
-
-	var createLink = function(linkText, linkUrl) {
-	    editor.summernote('createLink', {
-	      text: linkText,
-	      url: linkUrl,
-	      isNewWindow: false
-	    });
-	};
-
-	var unlink = function() { editor.summernote('unlink'); };
-
-	var insertText = function(text) { editor.summernote('editor.insertText', text); };
-
-	var codeView = function() { editor.summernote('codeview.toggle'); };
-
-	var insertTable = function(dim) { editor.summernote('insertTable', dim); };
-
-	var insertHorizontalRule = function() { editor.summernote('insertHorizontalRule'); };
-
 </script>
